--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>ZWJ Emoji Combiner</h2>
+<h2>Emoji Combiner</h2>
 
 <p>Some emojis can be combined to create others, using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">ZWJ</a>. Try out the following:</p>
 
@@ -9,7 +9,13 @@
 
 <input id="text_input" onkeyup="text_update()" type="text" value="👨❤️👨">
 
-<span id="span_display"></span>
+<br>
+
+Output: <span id="span_display"></span>
+
+<br><br>
+
+By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Read about this <a href="http://2016.emojicon.co/sessions/what-the-zwj-the-art-of-zwj-sequences/">here</a>.
 
 <script src="index.js"></script>
 
