--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h2>Emoji Combiner</h2>
 
-<p>Some emojis can be combined to create others, using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">ZWJ</a>. Try out the following:</p>
+<p>Some emojis can be combined to create others. Try out the following:</p>
 
 <p>👨👩👦👦</p>
 <p>👨❤️👨</p>
@@ -15,7 +15,7 @@ Output: <span id="span_display"></span>
 
 <br><br>
 
-By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Read about this <a href="http://2016.emojicon.co/sessions/what-the-zwj-the-art-of-zwj-sequences/">here</a>.
+By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Works via <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">ZWJ</a>, read more <a href="http://2016.emojicon.co/sessions/what-the-zwj-the-art-of-zwj-sequences/">here</a>.
 
 <script src="index.js"></script>
 
