--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 
 <p>Enter emojis and they will be combined.</p>
 
-<input id="text_input" onkeyup="text_update()" type="text" value="👨❤️👨">
+<input id="text_input" onkeyup="text_update()" type="text" value="👨❤️👨 👨👩👦👦  👨👩👦  👨👦">
 
 <br>
 
 Result: <span id="span_display"></span>
 
-<p>This only works on some emojis. Examples:</p>
+<p>This only works on some emojis. Examples (copy-paste into the box above)</p>
 
+<p>👨❤️👨</p>
 <p>👨👩👦👦</p>
 <p>👨👩👦</p>
 <p>👨👦</p>
-<p>👨❤️👨</p>
 
 By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Emojis are combined using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">ZWJ</a>, read more <a href="http://2016.emojicon.co/sessions/what-the-zwj-the-art-of-zwj-sequences/">here</a>.
 
