--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Result: <span id="span_display2"></span>
 <p>👨👩👦 => 👨‍👩‍👦</p>
 <p>👨👦 => 👨‍👦</p>
 
-By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Emojis are combined using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">ZWJ</a>.
+By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Emojis are combined using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">zero-width joiner (ZWJ)</a>.
 
 <script src="index.js"></script>
 
