--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@ Result: <span id="span_display"></span>
 Result: <span id="span_display2"></span>
 
 
-<p>This only works on some emojis. Examples (copy-paste into boxes above), see more <a href="http://emojipedia.org/emoji-zwj-sequences/">here</a></p>
+<p>This only works on some emojis. Examples (copy-paste into boxes above), see more <a href="http://emojipedia.org/emoji-zwj-sequences/">here</a> and <a href="http://blog.emojipedia.org/emoji-zwj-sequences-three-letters-many-possibilities/">here</a></p>
 
 <p>👨❤️👨 => 👨‍❤️‍👨</p>
 <p>👩❤️💋👩 => 👩‍❤️‍💋‍👩</p>
 <p>👨👩👦👦 => 👨‍👩‍👦‍👦</p>
 <p>👨👩👦 => 👨‍👩‍👦</p>
 <p>👨👦 => 👨‍👦</p>
+<p>👁🗨 => 👁‍🗨</p>
 
 By <a href="http://www.gkovacs.com/">Geza Kovacs</a>. Emojis are combined using <a href="https://en.wikipedia.org/wiki/Zero-width_joiner">zero-width joiner (ZWJ)</a>.
 
